asm/.antlr/GrogParser.java
// Generated from /home/martinstraus/MEGA/proyectos/propios/grog/asm/Grog.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrogParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, WHITESPACE=2, WS=3, COMMENT=4, LINE_COMMENT=5, LOAD=6, STORE=7, 
		INCREMENT=8, DECREMENT=9, ADD=10, SUBTRACT=11, DIVIDE=12, MULTIPLY=13, 
		EQUAL=14, GREATER=15, GREATER_OR_EQUAL=16, LESS=17, LESS_OR_EQUAL=18, 
		NOT_EQUAL=19, NOT=20, AND=21, XOR=22, OR=23, STOP=24, JUMP=25, IF=26, 
		HEX_DIGIT=27, HEXA_BYTE=28, WORD=29, REGISTER=30, ABSOLUTE_ADDRESS=31, 
		OFFSET_ADDRESS=32, POINTER_ADDRESS=33;
	public static final int
		RULE_program = 0, RULE_instruction = 1, RULE_load = 2, RULE_store = 3, 
		RULE_copyValue = 4, RULE_copyRightToLeft = 5, RULE_increment = 6, RULE_decrement = 7, 
		RULE_arithmeticOperation = 8, RULE_unaryBooleanOperation = 9, RULE_binaryBooleanOperation = 10, 
		RULE_jump = 11, RULE_stop = 12;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "instruction", "load", "store", "copyValue", "copyRightToLeft", 
			"increment", "decrement", "arithmeticOperation", "unaryBooleanOperation", 
			"binaryBooleanOperation", "jump", "stop"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'<->'", null, null, null, null, "'<-'", "'->'", "'++'", "'--'", 
			"'+'", "'-'", "'/'", "'*'", "'='", "'>'", "'>='", "'<'", "'<='", "'!='", 
			"'NOT'", "'AND'", "'XOR'", "'OR'", "'STOP'", "'JUMP'", "'IF'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "WHITESPACE", "WS", "COMMENT", "LINE_COMMENT", "LOAD", "STORE", 
			"INCREMENT", "DECREMENT", "ADD", "SUBTRACT", "DIVIDE", "MULTIPLY", "EQUAL", 
			"GREATER", "GREATER_OR_EQUAL", "LESS", "LESS_OR_EQUAL", "NOT_EQUAL", 
			"NOT", "AND", "XOR", "OR", "STOP", "JUMP", "IF", "HEX_DIGIT", "HEXA_BYTE", 
			"WORD", "REGISTER", "ABSOLUTE_ADDRESS", "OFFSET_ADDRESS", "POINTER_ADDRESS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grog.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrogParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(GrogParser.EOF, 0); }
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(27); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(26);
				instruction();
				}
				}
				setState(29); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STOP) | (1L << JUMP) | (1L << IF) | (1L << HEXA_BYTE) | (1L << REGISTER) | (1L << ABSOLUTE_ADDRESS) | (1L << OFFSET_ADDRESS) | (1L << POINTER_ADDRESS))) != 0) );
			setState(31);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionContext extends ParserRuleContext {
		public IncrementContext increment() {
			return getRuleContext(IncrementContext.class,0);
		}
		public DecrementContext decrement() {
			return getRuleContext(DecrementContext.class,0);
		}
		public ArithmeticOperationContext arithmeticOperation() {
			return getRuleContext(ArithmeticOperationContext.class,0);
		}
		public UnaryBooleanOperationContext unaryBooleanOperation() {
			return getRuleContext(UnaryBooleanOperationContext.class,0);
		}
		public BinaryBooleanOperationContext binaryBooleanOperation() {
			return getRuleContext(BinaryBooleanOperationContext.class,0);
		}
		public CopyValueContext copyValue() {
			return getRuleContext(CopyValueContext.class,0);
		}
		public LoadContext load() {
			return getRuleContext(LoadContext.class,0);
		}
		public StoreContext store() {
			return getRuleContext(StoreContext.class,0);
		}
		public JumpContext jump() {
			return getRuleContext(JumpContext.class,0);
		}
		public StopContext stop() {
			return getRuleContext(StopContext.class,0);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_instruction);
		try {
			setState(43);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(33);
				increment();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(34);
				decrement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(35);
				arithmeticOperation();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(36);
				unaryBooleanOperation();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(37);
				binaryBooleanOperation();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(38);
				copyValue();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(39);
				load();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(40);
				store();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(41);
				jump();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(42);
				stop();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoadContext extends ParserRuleContext {
		public Token Register;
		public Token Value;
		public Token Address;
		public Token Offset;
		public Token Pointer;
		public TerminalNode LOAD() { return getToken(GrogParser.LOAD, 0); }
		public TerminalNode REGISTER() { return getToken(GrogParser.REGISTER, 0); }
		public TerminalNode HEXA_BYTE() { return getToken(GrogParser.HEXA_BYTE, 0); }
		public TerminalNode ABSOLUTE_ADDRESS() { return getToken(GrogParser.ABSOLUTE_ADDRESS, 0); }
		public TerminalNode OFFSET_ADDRESS() { return getToken(GrogParser.OFFSET_ADDRESS, 0); }
		public TerminalNode POINTER_ADDRESS() { return getToken(GrogParser.POINTER_ADDRESS, 0); }
		public LoadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_load; }
	}

	public final LoadContext load() throws RecognitionException {
		LoadContext _localctx = new LoadContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_load);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			((LoadContext)_localctx).Register = match(REGISTER);
			setState(46);
			match(LOAD);
			setState(51);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case HEXA_BYTE:
				{
				setState(47);
				((LoadContext)_localctx).Value = match(HEXA_BYTE);
				}
				break;
			case ABSOLUTE_ADDRESS:
				{
				setState(48);
				((LoadContext)_localctx).Address = match(ABSOLUTE_ADDRESS);
				}
				break;
			case OFFSET_ADDRESS:
				{
				setState(49);
				((LoadContext)_localctx).Offset = match(OFFSET_ADDRESS);
				}
				break;
			case POINTER_ADDRESS:
				{
				setState(50);
				((LoadContext)_localctx).Pointer = match(POINTER_ADDRESS);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StoreContext extends ParserRuleContext {
		public Token Register;
		public Token Value;
		public Token Address;
		public Token Offset;
		public Token Pointer;
		public TerminalNode STORE() { return getToken(GrogParser.STORE, 0); }
		public TerminalNode REGISTER() { return getToken(GrogParser.REGISTER, 0); }
		public TerminalNode HEXA_BYTE() { return getToken(GrogParser.HEXA_BYTE, 0); }
		public TerminalNode ABSOLUTE_ADDRESS() { return getToken(GrogParser.ABSOLUTE_ADDRESS, 0); }
		public TerminalNode OFFSET_ADDRESS() { return getToken(GrogParser.OFFSET_ADDRESS, 0); }
		public TerminalNode POINTER_ADDRESS() { return getToken(GrogParser.POINTER_ADDRESS, 0); }
		public StoreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_store; }
	}

	public final StoreContext store() throws RecognitionException {
		StoreContext _localctx = new StoreContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_store);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case REGISTER:
				{
				setState(53);
				((StoreContext)_localctx).Register = match(REGISTER);
				}
				break;
			case HEXA_BYTE:
				{
				setState(54);
				((StoreContext)_localctx).Value = match(HEXA_BYTE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(57);
			match(STORE);
			setState(61);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ABSOLUTE_ADDRESS:
				{
				setState(58);
				((StoreContext)_localctx).Address = match(ABSOLUTE_ADDRESS);
				}
				break;
			case OFFSET_ADDRESS:
				{
				setState(59);
				((StoreContext)_localctx).Offset = match(OFFSET_ADDRESS);
				}
				break;
			case POINTER_ADDRESS:
				{
				setState(60);
				((StoreContext)_localctx).Pointer = match(POINTER_ADDRESS);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CopyValueContext extends ParserRuleContext {
		public CopyValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_copyValue; }
	 
		public CopyValueContext() { }
		public void copyFrom(CopyValueContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CopyRegisterContext extends CopyValueContext {
		public Token SourceRegister;
		public Token DestinationRegister;
		public TerminalNode STORE() { return getToken(GrogParser.STORE, 0); }
		public List<TerminalNode> REGISTER() { return getTokens(GrogParser.REGISTER); }
		public TerminalNode REGISTER(int i) {
			return getToken(GrogParser.REGISTER, i);
		}
		public CopyRegisterContext(CopyValueContext ctx) { copyFrom(ctx); }
	}
	public static class CopyAbsoluteToPointerContext extends CopyValueContext {
		public Token SourceAddress;
		public Token DestinationPointer;
		public TerminalNode STORE() { return getToken(GrogParser.STORE, 0); }
		public TerminalNode ABSOLUTE_ADDRESS() { return getToken(GrogParser.ABSOLUTE_ADDRESS, 0); }
		public TerminalNode POINTER_ADDRESS() { return getToken(GrogParser.POINTER_ADDRESS, 0); }
		public CopyAbsoluteToPointerContext(CopyValueContext ctx) { copyFrom(ctx); }
	}
	public static class CopyOffsetToAbsoluteContext extends CopyValueContext {
		public Token SourceOffset;
		public Token DestinationAddress;
		public TerminalNode STORE() { return getToken(GrogParser.STORE, 0); }
		public TerminalNode OFFSET_ADDRESS() { return getToken(GrogParser.OFFSET_ADDRESS, 0); }
		public TerminalNode ABSOLUTE_ADDRESS() { return getToken(GrogParser.ABSOLUTE_ADDRESS, 0); }
		public CopyOffsetToAbsoluteContext(CopyValueContext ctx) { copyFrom(ctx); }
	}
	public static class CopyOffsetToOffsetContext extends CopyValueContext {
		public Token SourceOffset;
		public Token DestinationOffset;
		public TerminalNode STORE() { return getToken(GrogParser.STORE, 0); }
		public List<TerminalNode> OFFSET_ADDRESS() { return getTokens(GrogParser.OFFSET_ADDRESS); }
		public TerminalNode OFFSET_ADDRESS(int i) {
			return getToken(GrogParser.OFFSET_ADDRESS, i);
		}
		public CopyOffsetToOffsetContext(CopyValueContext ctx) { copyFrom(ctx); }
	}
	public static class CopyPointerToOffsetContext extends CopyValueContext {
		public Token SourcePointer;
		public Token DestinationOffset;
		public TerminalNode STORE() { return getToken(GrogParser.STORE, 0); }
		public TerminalNode POINTER_ADDRESS() { return getToken(GrogParser.POINTER_ADDRESS, 0); }
		public TerminalNode OFFSET_ADDRESS() { return getToken(GrogParser.OFFSET_ADDRESS, 0); }
		public CopyPointerToOffsetContext(CopyValueContext ctx) { copyFrom(ctx); }
	}
	public static class CopyAbsoluteToOffsetContext extends CopyValueContext {
		public Token SourceAddress;
		public Token DestinationOffset;
		public TerminalNode STORE() { return getToken(GrogParser.STORE, 0); }
		public TerminalNode ABSOLUTE_ADDRESS() { return getToken(GrogParser.ABSOLUTE_ADDRESS, 0); }
		public TerminalNode OFFSET_ADDRESS() { return getToken(GrogParser.OFFSET_ADDRESS, 0); }
		public CopyAbsoluteToOffsetContext(CopyValueContext ctx) { copyFrom(ctx); }
	}
	public static class CopyOffsetToPointerContext extends CopyValueContext {
		public Token SourceOffset;
		public Token DestinationPointer;
		public TerminalNode STORE() { return getToken(GrogParser.STORE, 0); }
		public TerminalNode OFFSET_ADDRESS() { return getToken(GrogParser.OFFSET_ADDRESS, 0); }
		public TerminalNode POINTER_ADDRESS() { return getToken(GrogParser.POINTER_ADDRESS, 0); }
		public CopyOffsetToPointerContext(CopyValueContext ctx) { copyFrom(ctx); }
	}
	public static class CopyPointerToAbsoluteContext extends CopyValueContext {
		public Token SourcePointer;
		public Token DestinationAddress;
		public TerminalNode STORE() { return getToken(GrogParser.STORE, 0); }
		public TerminalNode POINTER_ADDRESS() { return getToken(GrogParser.POINTER_ADDRESS, 0); }
		public TerminalNode ABSOLUTE_ADDRESS() { return getToken(GrogParser.ABSOLUTE_ADDRESS, 0); }
		public CopyPointerToAbsoluteContext(CopyValueContext ctx) { copyFrom(ctx); }
	}
	public static class CopyPointerToPointerContext extends CopyValueContext {
		public Token SourcePointer;
		public Token DestinationPointer;
		public TerminalNode STORE() { return getToken(GrogParser.STORE, 0); }
		public List<TerminalNode> POINTER_ADDRESS() { return getTokens(GrogParser.POINTER_ADDRESS); }
		public TerminalNode POINTER_ADDRESS(int i) {
			return getToken(GrogParser.POINTER_ADDRESS, i);
		}
		public CopyPointerToPointerContext(CopyValueContext ctx) { copyFrom(ctx); }
	}
	public static class CopyAbsoluteToAbsoluteContext extends CopyValueContext {
		public Token SourceAddress;
		public Token DestinationAddress;
		public TerminalNode STORE() { return getToken(GrogParser.STORE, 0); }
		public List<TerminalNode> ABSOLUTE_ADDRESS() { return getTokens(GrogParser.ABSOLUTE_ADDRESS); }
		public TerminalNode ABSOLUTE_ADDRESS(int i) {
			return getToken(GrogParser.ABSOLUTE_ADDRESS, i);
		}
		public CopyAbsoluteToAbsoluteContext(CopyValueContext ctx) { copyFrom(ctx); }
	}

	public final CopyValueContext copyValue() throws RecognitionException {
		CopyValueContext _localctx = new CopyValueContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_copyValue);
		try {
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new CopyRegisterContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(63);
				((CopyRegisterContext)_localctx).SourceRegister = match(REGISTER);
				setState(64);
				match(STORE);
				setState(65);
				((CopyRegisterContext)_localctx).DestinationRegister = match(REGISTER);
				}
				}
				break;
			case 2:
				_localctx = new CopyAbsoluteToAbsoluteContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(66);
				((CopyAbsoluteToAbsoluteContext)_localctx).SourceAddress = match(ABSOLUTE_ADDRESS);
				setState(67);
				match(STORE);
				setState(68);
				((CopyAbsoluteToAbsoluteContext)_localctx).DestinationAddress = match(ABSOLUTE_ADDRESS);
				}
				}
				break;
			case 3:
				_localctx = new CopyAbsoluteToOffsetContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				{
				setState(69);
				((CopyAbsoluteToOffsetContext)_localctx).SourceAddress = match(ABSOLUTE_ADDRESS);
				setState(70);
				match(STORE);
				setState(71);
				((CopyAbsoluteToOffsetContext)_localctx).DestinationOffset = match(OFFSET_ADDRESS);
				}
				}
				break;
			case 4:
				_localctx = new CopyAbsoluteToPointerContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				{
				setState(72);
				((CopyAbsoluteToPointerContext)_localctx).SourceAddress = match(ABSOLUTE_ADDRESS);
				setState(73);
				match(STORE);
				setState(74);
				((CopyAbsoluteToPointerContext)_localctx).DestinationPointer = match(POINTER_ADDRESS);
				}
				}
				break;
			case 5:
				_localctx = new CopyOffsetToAbsoluteContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				{
				setState(75);
				((CopyOffsetToAbsoluteContext)_localctx).SourceOffset = match(OFFSET_ADDRESS);
				setState(76);
				match(STORE);
				setState(77);
				((CopyOffsetToAbsoluteContext)_localctx).DestinationAddress = match(ABSOLUTE_ADDRESS);
				}
				}
				break;
			case 6:
				_localctx = new CopyOffsetToOffsetContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				{
				setState(78);
				((CopyOffsetToOffsetContext)_localctx).SourceOffset = match(OFFSET_ADDRESS);
				setState(79);
				match(STORE);
				setState(80);
				((CopyOffsetToOffsetContext)_localctx).DestinationOffset = match(OFFSET_ADDRESS);
				}
				}
				break;
			case 7:
				_localctx = new CopyOffsetToPointerContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				{
				setState(81);
				((CopyOffsetToPointerContext)_localctx).SourceOffset = match(OFFSET_ADDRESS);
				setState(82);
				match(STORE);
				setState(83);
				((CopyOffsetToPointerContext)_localctx).DestinationPointer = match(POINTER_ADDRESS);
				}
				}
				break;
			case 8:
				_localctx = new CopyPointerToAbsoluteContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				{
				setState(84);
				((CopyPointerToAbsoluteContext)_localctx).SourcePointer = match(POINTER_ADDRESS);
				setState(85);
				match(STORE);
				setState(86);
				((CopyPointerToAbsoluteContext)_localctx).DestinationAddress = match(ABSOLUTE_ADDRESS);
				}
				}
				break;
			case 9:
				_localctx = new CopyPointerToOffsetContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				{
				setState(87);
				((CopyPointerToOffsetContext)_localctx).SourcePointer = match(POINTER_ADDRESS);
				setState(88);
				match(STORE);
				setState(89);
				((CopyPointerToOffsetContext)_localctx).DestinationOffset = match(OFFSET_ADDRESS);
				}
				}
				break;
			case 10:
				_localctx = new CopyPointerToPointerContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				{
				setState(90);
				((CopyPointerToPointerContext)_localctx).SourcePointer = match(POINTER_ADDRESS);
				setState(91);
				match(STORE);
				setState(92);
				((CopyPointerToPointerContext)_localctx).DestinationPointer = match(POINTER_ADDRESS);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CopyRightToLeftContext extends ParserRuleContext {
		public Token SourceAddress;
		public Token SourceOffset;
		public Token SourcePointer;
		public List<TerminalNode> ABSOLUTE_ADDRESS() { return getTokens(GrogParser.ABSOLUTE_ADDRESS); }
		public TerminalNode ABSOLUTE_ADDRESS(int i) {
			return getToken(GrogParser.ABSOLUTE_ADDRESS, i);
		}
		public List<TerminalNode> OFFSET_ADDRESS() { return getTokens(GrogParser.OFFSET_ADDRESS); }
		public TerminalNode OFFSET_ADDRESS(int i) {
			return getToken(GrogParser.OFFSET_ADDRESS, i);
		}
		public List<TerminalNode> POINTER_ADDRESS() { return getTokens(GrogParser.POINTER_ADDRESS); }
		public TerminalNode POINTER_ADDRESS(int i) {
			return getToken(GrogParser.POINTER_ADDRESS, i);
		}
		public CopyRightToLeftContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_copyRightToLeft; }
	}

	public final CopyRightToLeftContext copyRightToLeft() throws RecognitionException {
		CopyRightToLeftContext _localctx = new CopyRightToLeftContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_copyRightToLeft);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ABSOLUTE_ADDRESS:
				{
				setState(95);
				((CopyRightToLeftContext)_localctx).SourceAddress = match(ABSOLUTE_ADDRESS);
				}
				break;
			case OFFSET_ADDRESS:
				{
				setState(96);
				((CopyRightToLeftContext)_localctx).SourceOffset = match(OFFSET_ADDRESS);
				}
				break;
			case POINTER_ADDRESS:
				{
				setState(97);
				((CopyRightToLeftContext)_localctx).SourcePointer = match(POINTER_ADDRESS);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(100);
			match(T__0);
			setState(104);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ABSOLUTE_ADDRESS:
				{
				setState(101);
				((CopyRightToLeftContext)_localctx).SourceAddress = match(ABSOLUTE_ADDRESS);
				}
				break;
			case OFFSET_ADDRESS:
				{
				setState(102);
				((CopyRightToLeftContext)_localctx).SourceOffset = match(OFFSET_ADDRESS);
				}
				break;
			case POINTER_ADDRESS:
				{
				setState(103);
				((CopyRightToLeftContext)_localctx).SourcePointer = match(POINTER_ADDRESS);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IncrementContext extends ParserRuleContext {
		public Token Register;
		public TerminalNode LOAD() { return getToken(GrogParser.LOAD, 0); }
		public TerminalNode INCREMENT() { return getToken(GrogParser.INCREMENT, 0); }
		public TerminalNode REGISTER() { return getToken(GrogParser.REGISTER, 0); }
		public IncrementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_increment; }
	}

	public final IncrementContext increment() throws RecognitionException {
		IncrementContext _localctx = new IncrementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_increment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			((IncrementContext)_localctx).Register = match(REGISTER);
			setState(107);
			match(LOAD);
			setState(108);
			match(INCREMENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecrementContext extends ParserRuleContext {
		public Token Register;
		public TerminalNode LOAD() { return getToken(GrogParser.LOAD, 0); }
		public TerminalNode DECREMENT() { return getToken(GrogParser.DECREMENT, 0); }
		public TerminalNode REGISTER() { return getToken(GrogParser.REGISTER, 0); }
		public DecrementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decrement; }
	}
